--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Ignore compiled code
 dist
-
+.vscode
 # ------------- Defaults ------------- #
 
 # Logs
@@ -111,7 +111,7 @@ dist
 
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
-
+.vscode/*
 # yarn v2
 
 .yarn/cache
