--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "private": true,
+  "private": false,
   "displayName": "AirTouch5",
   "name": "homebridge-airtouch5-platform",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "Provides support for the AirTouch5 zone controller.",
   "license": "Apache-2.0",
   "repository": {
