--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": false,
   "displayName": "AirTouch5",
   "name": "homebridge-airtouch5-platform",
-  "version": "4.0.0-0",
+  "version": "1.0.2",
   "description": "Provides support for the AirTouch5 zone controller.",
   "license": "Apache-2.0",
   "repository": {
